# darjeeling

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: demo_feedback.yml  use_case.yml
.github/workflows/: ci.yml
docs/: mvp_demo_proposal.md
docs/articles/: darjeeling-introduction-iteration-log.md  darjeeling-introduction.md
docs/design/: 00_decisions.md  01_architecture.md  02_target_boundary_handoff.md  03_target_independent_architecture.md  04_target_independent_refactor_plan.md  05_gpt55_review_refactor_plan.md  06_gpt55_pro_0614_refactor_plan.md  07_gpt55_pro_0614_1_refactor_plan.md  08_gpt55_pro_0622_teacher_eval_plan.md  README.md
docs/experiments/: 2026-06-08_plan.md  2026-06-08_results.md  2026-06-09_l2_evolution.md  2026-06-10_l1_age_path.md  2026-06-10_l1_agent_session.md  2026-06-10_l2_agent_session.md  2026-06-10_l2_evidence_policy.md  2026-06-10_l2_lower_miss_scope.md  2026-06-10_l2_real_agent_budget.md  2026-06-10_l2_real_agent_eval_metrics.csv  2026-06-10_l2_visible_validation_ratio.md  2026-06-10_l3_agent_session.md  2026-06-10_l3_preflight.md  2026-06-10_promotion_gate.md  2026-06-13_gpt55_refactor_progress.md  2026-06-13_gpt55_review_verification.md  2026-06-14_gpt55_pro_review_0614_1_verification.md  2026-06-14_gpt55_pro_review_verification.md  2026-06-14_post_refactor_experiment_plan.md  2026-06-14_post_refactor_fixed_workload_experiment_plan.md  2026-06-14_post_refactor_fixed_workload_results.md  2026-06-14_post_refactor_results.md  2026-06-15_post_refactor_fixed_workload_summary.md  2026-06-22_gpt55_pro_review_verification.md  2026-06-22_teacher_eval_iteration_plan.md  2026-06-22_teacher_eval_iteration_report.md  2026-06-22_teacher_gold_label_audit_plan.md  2026-06-22_teacher_gold_label_audit_report.md  2026-06-22_teacher_prompt_search_plan.md  (+44 more)
src/darjeeling/: __init__.py  (+19 more)
tests/: conftest.py  test_01_target_definition.py  test_02_snapshot_reference.py  test_03_artifact_worker.py  test_04_agent_workspace.py  test_05_candidate_evaluation.py  test_06_release_runtime.py  test_07_runtime_trace_metrics.py  test_08_audit_monitoring.py  test_09_telemetry_recompile.py  test_10_compile_orchestration.py  test_11_end_to_end_thin_target.py  test_12_demo_cli.py  test_13_bfcl_mini_smoke.py  test_artifact_store.py  test_cli_target.py  test_compiler_loop.py  test_core_contracts.py  test_cost.py  test_evolution_policy.py  test_experiment_suite_cli.py  test_experiments.py  test_frame_parser.py  test_gold_leakage.py  test_hard_buffer.py  test_l1_coding_agent.py  test_l1_dsl.py  test_l1_rust_worker.py  test_l2_coding_agent.py  test_l2_guard.py  test_l2_student_training.py  test_l2_target_evolution.py  test_l2_target_runtime.py  test_l2_tuner.py  test_l3_local_slm.py  test_l3_prompt_optimizer.py  test_l4_context.py  test_l4_proposal.py  test_l4_teacher.py  test_massive_prepare.py  (+6 more)
(+279 files in other folders)
