[project]
name = "darjeeling-ai"
version = "0.1.0a1"
description = "LLM runtime for moving stable model behavior into fast local artifacts with safe fallback."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
dependencies = [
  "pyyaml>=6.0.0",
  "typer>=0.12.0",
  "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
darjeeling = "darjeeling.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/darjeeling"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
